test/ref.ruse
func main() int {
    var a int
    var b = &a
    // &&a // error
    // *a
}
